Bug 46417 - spu-elf --enable-werror-always build fails
Summary: spu-elf --enable-werror-always build fails
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords: build
Depends on:
Blocks: enable-werror-always
  Show dependency treegraph
 
Reported: 2010-11-10 17:10 UTC by Jorn Wolfgang Rennecke
Modified: 2010-11-10 20:16 UTC (History)
2 users (show)

See Also:
Host:
Target: spu-elf
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jorn Wolfgang Rennecke 2010-11-10 17:10:46 UTC
There are a some warnings that cause the build to fail.
Comment 1 Jorn Wolfgang Rennecke 2010-11-10 20:15:28 UTC
Author: amylaar
Date: Wed Nov 10 20:15:24 2010
New Revision: 166554

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=166554
Log:
	PR target/46417
	* config/spu/spu.c (spu_expand_insv): Remove unused variables.
	(spu_split_store): Use aform.
	(spu_function_profiler): Mark parameter labelno with ATTRIBUTE_UNUSED.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/spu/spu.c
Comment 2 Jorn Wolfgang Rennecke 2010-11-10 20:16:30 UTC
Patch has been applied to trunk.