	PR target/46417 	* config/spu/spu.c (spu_expand_insv): Remove unused variables. 	(spu_split_store): Use aform. 	(spu_function_profiler): Mark parameter labelno with ATTRIBUTE_UNUSED.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@166554 138bc75d-0d04-0410-961f-82ee72b054a4